<?xml version="1.0" encoding="utf-8"?><!-- Layout for the rugby score counter. -->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/rugby"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                style="@style/teamName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/teamA" />

            <TextView
                android:id="@+id/team_a_score"
                style="@style/teamScore"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/zero" />

            <LinearLayout
                style="@style/cardsLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/team_a_yellow_card"
                    style="@style/yellowCard"
                    android:text="@string/zero" />

                <TextView
                    android:id="@+id/team_a_red_card"
                    style="@style/redCard"
                    android:text="@string/zero" />
            </LinearLayout>

            <Button
                style="@style/buttonStyle"
                android:onClick="addFiveForTeamA"
                android:text="@string/tryText" />

            <Button
                style="@style/buttonStyle"
                android:onClick="addThreeForTeamA"
                android:text="@string/penaltyText" />

            <Button
                style="@style/buttonStyle"
                android:onClick="addTwoForTeamA"
                android:text="@string/conversionText" />

            <Button
                style="@style/buttonStyle"
                android:onClick="addYellowCardForTeamA"
                android:text="@string/yellowText" />

            <Button
                style="@style/buttonStyle"
                android:onClick="addRedCardForTeamA"
                android:text="@string/redText" />

        </LinearLayout>

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_marginTop="16dp"
            android:background="@android:color/darker_gray" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                style="@style/teamName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/teamB" />

            <TextView
                android:id="@+id/team_b_score"
                style="@style/teamScore"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/zero" />

            <LinearLayout
                style="@style/cardsLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/team_b_yellow_card"
                    style="@style/yellowCard"
                    android:text="@string/zero" />

                <TextView
                    android:id="@+id/team_b_red_card"
                    style="@style/redCard"
                    android:text="@string/zero" />
            </LinearLayout>

            <Button
                style="@style/buttonStyle"
                android:onClick="addFiveForTeamB"
                android:text="@string/tryText" />

            <Button
                style="@style/buttonStyle"
                android:onClick="addThreeForTeamB"
                android:text="@string/penaltyText" />

            <Button
                style="@style/buttonStyle"
                android:onClick="addTwoForTeamB"
                android:text="@string/conversionText" />

            <Button
                style="@style/buttonStyle"
                android:onClick="addYellowCardForTeamB"
                android:text="@string/yellowText" />

            <Button
                style="@style/buttonStyle"
                android:onClick="addRedCardForTeamB"
                android:text="@string/redText" />
        </LinearLayout>
    </LinearLayout>

    <Button
        style="@style/resetButtonStyle"
        android:onClick="resetScore"
        android:text="@string/resetText" />

</RelativeLayout>